k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: poker-ingress
  namespace: default
spec:
  rules:
    - host: poker-table.stack.build
      http:
        paths:
          - backend:
              serviceName: poker-table-service
              servicePort: grpc
    - host: poker-user.stack.build
      http:
        paths:
          - backend:
              serviceName: poker-user-service
              servicePort: grpc
  tls:
    # This secret must exist beforehand
    # The cert must also contain the subj-name poker-table.stack.build
    # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/PREREQUISITES.md#tls-certificates
    - secretName: poker-table.stack.build
      hosts:
        - poker-table.stack.build
    - secretName: poker-user.stack.build
      hosts:
        - poker-user.stack.build
